--- a/news.html
+++ b/news.html
@@ -37,7 +37,18 @@
     </div>
   </nav>
   <div class="d-flex flex-column border container-fluid">
-
+    <div class="d-flex flex-row border container-fluid">
+      <img src="thumb1.jpg" width="132" height="90">
+      <span class="fs-3">낸 돈 10배 받은 노인도, 첫 직장 가진 청년도 "연금 개혁하자”</span>
+    </div>
+    <div class="d-flex flex-row border container-fluid">
+      <img src="thumb2.jpg" width="132" height="90">
+      <span class="fs-3">'10억 로또' 고덕롯데캐슬베네루체 줍줍 나왔다</span>
+    </div>
+    <div class="d-flex flex-row border container-fluid">
+      <img src="thumb3.jpg" width="132" height="90">
+      <span class="fs-3">연준, 이번주 3년 만에 금리 올린다… '인상 속도'가 향후 코스피 좌우할 듯</span>
+    </div>
   </div>
 </body>
 </html>
